--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
   <!--Header start-->
   <header class="header">
-    <a class="link--out" href="index.html">
+    <a class="link--out" href="#">
       <div class="header__logo">
         <img class="header__img" src="img/logo.png" alt="Logo">
         <h1 class="header__h1">English</h1>
@@ -60,8 +60,8 @@
       </a>
       
       <ul class="nav__ul">
-        <li class="nav__li"><a class="nav__a" href="index.html">English 1st</a></li>
-        <li class="nav__li"><a class="nav__a" href="english2.html">English 2nd</a></li>
+        <li class="nav__li"><a class="nav__a" href="#">English 1st</a></li>
+        <li class="nav__li"><a class="nav__a" href="english_2.html">English 2nd</a></li>
       </ul>
       
       <label class="menu--closer" for="checkbox"></label>
