--- a/english_2.html
+++ b/english_2.html
@@ -60,8 +60,8 @@
       </a>
       
       <ul class="nav__ul">
-        <li class="nav__li"><a class="nav__a" href="index.html">English 1st</a></li>
-        <li class="nav__li"><a class="nav__a" href="#">English 2nd</a></li>
+        <li class="nav__li"><a class="nav__a" href="index.html">English 1<sup class="t-l">st</sup></a></li>
+        <li class="nav__li"><a class="nav__a" href="#">English 2<sup class="t-l">nd</sup></a></li>
       </ul>
       
       <label class="menu--closer" for="checkbox"></label>
