--- a/english_2.html
+++ b/english_2.html
@@ -29,7 +29,7 @@
   <!--favicon-->
   <link rel="shortcut icon" type="image/x-icon" href="img/logo.png">
   
-  <title>English Writing</title>
+  <title>English</title>
 
 </head>
 <body>
