--- a/english_2.html
+++ b/english_2.html
@@ -9,10 +9,10 @@
   <link rel="stylesheet" href="css/style.css">
   
   <!--Extra small devices (phones, 650px and down)-->
-  <link rel="stylesheet" media="screen and (max-width: 650px)" href="css/mobile.css">
+  <link rel="stylesheet" media="screen and (max-width: 600px)" href="css/mobile.css">
   
   <!--Small devices (portrait tablets and large phones, 650px and up)-->
-  <link rel="stylesheet" media="screen and (min-width: 650px)" href="css/tablet.css">
+  <link rel="stylesheet" media="screen and (min-width: 601px)" href="css/tablet.css">
   
   <!--Medium devices (landscape tablets, 768px and up)-->
   <link rel="stylesheet" media="screen and (min-width: 768px)" href="css/laptop.css">
@@ -135,7 +135,7 @@
   
   <!--footer start-->
     <footer class="footer">
-      <p class="footer__p">Copyright &copy; 2023 <span class="clr--primary">ENGLISH</span> | All rights reserved.</p>
+      <p class="footer__p">Copyright &copy; 2023 <span class="clr--primary">YASIN BHUIYAN</span> | All rights reserved.</p>
     </footer>
     <!--footer end-->
   
