--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
     </div>
     
     <div class="content__item">
-      <h2 class="content__h2"></h2>
-      <span class="content__span"></span>
-      <span class="content__span"></span>
-      <p class="content__p"></p>
+      <h2 class="content__h2">Internet</h2>
+      <span class="content__span">paragraph</span>
+      <span class="content__span">3</span>
+      <p class="content__p">The Internet is one of the most important inventions in the history of modern civilization .It is a network which can connect computers , mobile phones and other machines around the woy.Each network may link tens , hundreds ,or even thousands of computers enabling them to share information with one another.The internet has made it possible for people all over the world to communicate with one another effectively and inexpensively . Unlike traditional broadcasting media such as radio and television.The internet does not have a centralized distribution system.The internet has brought new opportunities to government , business and education.Governments use the internet for internal communication , distribution of information ,and automated tax – processing .In addition to offering goods and services online to customers , business use the internet to interact with other business.Many individuals use the internet for communicating through electronic mail ( E- mail) for news and research information , shopping paying bills and online banking . Internet is very important for students life.Educational institutions use the internet for research and to deliver courses and course materials to students.But it has some demerits also . Some website are not suitable for children , for example , violence and vulgar sites .In fact the internet has both good sides and bad sides . Though it has a few disadvantage ,we cannot think a moment without internet . Todays world is now greatly department on the internet.</p>
     </div>
     
     <div class="content__item">
