--- a/composition.html
+++ b/composition.html
@@ -83,10 +83,10 @@
   <section class="content">
     
     <div class="content__item">
-      <h2 class="content__h2"></h2>
-      <span class="content__span"></span>
-      <span class="content__span"></span>
-      <p class="content__p"></p>
+      <h2 class="content__h2">Duties of a Student</h2>
+      <span class="content__span">Composition</span>
+      <span class="content__span">1</span>
+      <p class="content__p">Students are the future hope of a country. During student life, students must cultivate the practice of doing all types of duties. These duties are not only limited to individual life but also extended to the service of family, institution, society, country and humanity. Proper execution of these duties makes a student life successful. There are a number of duties and responsibilities of students. The first and foremost duty of them is to acquire knowledge. But, they must not confine themselves to the academic study only. They must read newspapers, magazines, poetry, novels and dramas during their leisure. It will broaden their minds and enable them to know about the world. The second thing is that students must do all kinds of things needed for their individual life. For example, they must make a proper utilization of their time. They must attend their classes regularly. They must take care of their health because without having a good health they cannot go ahead. So, they must take regular physical exercise. They must develop their mental faculty by doing co-curricular activities. Most importantly, they must practice honesty, truthfulness, piety and kindness in every step of their lives. In short, student must try to pass a disciplined life. Students must not forget that they are part of a family, institution, society, country and the whole world. They must do their duties towards their parents, others family members, teachers, classmates. As members of the society, they have some duties and responsibilities to the people of the society. Students can utilize their free time for the poor and the illiterate to help them change their condition. They can teach them about health, nutrition and sanitation etc. Students should extend their help during natural calamities. During floods and cyclones and famine students stand by the affected people. Students beg money from the rich, raise funds, save the affected people, feed the hungry, nurse the sick and cloth the naked. During epidemics medical students and other students may serve the sick with proper food, cloth, medicine and other necessary things. Students can have a proper mental and physical development by doing their duties properly. If they fail to do so, they grow up only to be the burden of a family and a society.</p>
     </div>
     
     <div class="content__item">
