--- a/composition.html
+++ b/composition.html
@@ -70,7 +70,7 @@
         <li class="nav__li"><a class="nav__a link--out" href="./formal_letter.html">formal letter</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./cv.html">Cover Letter / CV</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./dialogue.html">Dialogue Writing</a></li>
-        <li class="nav__li"><a class="nav__a link--out" href="#">Composition</a></li>
+        <li class="nav__li"><a class="nav__a link--out in--page" href="#">Composition</a></li>
       </ul>
       
       <label class="menu--closer" for="checkbox"></label>
