--- a/cv.html
+++ b/cv.html
@@ -68,7 +68,7 @@
         <li class="nav__li"><a class="nav__a link--out" href="./formal_emails.html">Formal Emails</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./informal_letter.html">Informal letter</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./formal_letter.html">formal letter</a></li>
-        <li class="nav__li"><a class="nav__a link--out" href="#">Cover Letter / CV</a></li>
+        <li class="nav__li"><a class="nav__a link--out in--page" href="#">Cover Letter / CV</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./dialogue.html">Dialogue Writing</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./composition.html">Composition</a></li>
       </ul>
