--- a/dialogue.html
+++ b/dialogue.html
@@ -69,7 +69,7 @@
         <li class="nav__li"><a class="nav__a link--out" href="./informal_letter.html">Informal letter</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./formal_letter.html">formal letter</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./cv.html">Cover Letter / CV</a></li>
-        <li class="nav__li"><a class="nav__a link--out" href="#">Dialogue Writing</a></li>
+        <li class="nav__li"><a class="nav__a link--out in--page" href="#">Dialogue Writing</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./composition.html">Composition</a></li>
       </ul>
       
