--- a/formal_emails.html
+++ b/formal_emails.html
@@ -65,7 +65,7 @@
         <li class="nav__li"><a class="nav__a link--out" href="./story.html">Completing Story</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./graphs_charts.html">Graphs and Charts</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./informal_emails.html">Informal Emails</a></li>
-        <li class="nav__li"><a class="nav__a link--out" href="#">Formal Emails</a></li>
+        <li class="nav__li"><a class="nav__a link--out in--page" href="#">Formal Emails</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./informal_letter.html">Informal letter</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./formal_letter.html">formal letter</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./cv.html">Cover Letter / CV</a></li>
