--- a/graphs_charts.html
+++ b/graphs_charts.html
@@ -63,7 +63,7 @@
       <ul class="nav__ul">
         <li class="nav__li"><a class="nav__a link--out" href="./index.html">paragraph</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./story.html">Completing Story</a></li>
-        <li class="nav__li"><a class="nav__a link--out" href="#">Graphs and Charts</a></li>
+        <li class="nav__li"><a class="nav__a link--out in--page" href="#">Graphs and Charts</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./informal_emails.html">Informal Emails</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./formal_emails.html">Formal Emails</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./informal_letter.html">Informal letter</a></li>
