--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </a>
       </div>
       <ul class="nav__ul">
-        <li class="nav__li"><a class="nav__a link--out" href="#">paragraph</a></li>
+        <li class="nav__li"><a class="nav__a link--out in--page" href="#">paragraph</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./story.html">Completing Story</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./graphs_charts.html">Graphs and Charts</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./informal_emails.html">Informal Emails</a></li>
@@ -81,7 +81,6 @@
   
   <!--section start-->
   <section class="content">
-      
     <div class="content__item">
       <h2 class="content__h2">My Country</h2>
       <span class="content__span">Paragraph</span>
