--- a/informal_emails.html
+++ b/informal_emails.html
@@ -64,7 +64,7 @@
         <li class="nav__li"><a class="nav__a link--out" href="./index.html">paragraph</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./story.html">Completing Story</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./graphs_charts.html">Graphs and Charts</a></li>
-        <li class="nav__li"><a class="nav__a link--out" href="#">Informal Emails</a></li>
+        <li class="nav__li"><a class="nav__a link--out in--page" href="#">Informal Emails</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./formal_emails.html">Formal Emails</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./informal_letter.html">Informal letter</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./formal_letter.html">formal letter</a></li>
