--- a/informal_letter.html
+++ b/informal_letter.html
@@ -66,7 +66,7 @@
         <li class="nav__li"><a class="nav__a link--out" href="./graphs_charts.html">Graphs and Charts</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./informal_emails.html">Informal Emails</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./formal_emails.html">Formal Emails</a></li>
-        <li class="nav__li"><a class="nav__a link--out" href="#">Informal letter</a></li>
+        <li class="nav__li"><a class="nav__a link--out in--page" href="#">Informal letter</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./formal_letter.html">formal letter</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./cv.html">Cover Letter / CV</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./dialogue.html">Dialogue Writing</a></li>
