--- a/story.html
+++ b/story.html
@@ -62,7 +62,7 @@
       </div>
       <ul class="nav__ul">
         <li class="nav__li"><a class="nav__a link--out" href="./index.html">paragraph</a></li>
-        <li class="nav__li"><a class="nav__a link--out" href="#">Completing Story</a></li>
+        <li class="nav__li"><a class="nav__a link--out in--page" href="#">Completing Story</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./graphs_charts.html">Graphs and Charts</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./informal_emails.html">Informal Emails</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./formal_emails.html">Formal Emails</a></li>
