--- a/formal_letter.html
+++ b/formal_letter.html
@@ -67,7 +67,7 @@
         <li class="nav__li"><a class="nav__a link--out" href="./informal_emails.html">Informal Emails</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./formal_emails.html">Formal Emails</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./informal_letter.html">Informal letter</a></li>
-        <li class="nav__li"><a class="nav__a link--out" href="#">formal letter</a></li>
+        <li class="nav__li"><a class="nav__a link--out in--page" href="#">formal letter</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./cv.html">Cover Letter / CV</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./dialogue.html">Dialogue Writing</a></li>
         <li class="nav__li"><a class="nav__a link--out" href="./composition.html">Composition</a></li>
